--- a/search.html
+++ b/search.html
@@ -344,7 +344,7 @@
           return;
       }
 
-      fetch(`http://127.0.0.1:8002/stores/stores/${foodType}`)
+      fetch(`http://127.0.0.1:8002/stores/${foodType}`)
           .then(response => {
               if (!response.ok) {
                   throw new Error("Network response was not ok");
