--- a/reservation.html
+++ b/reservation.html
@@ -1,235 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GFOOD Reservations</title>
     <!-- Google Material Icons 폰트 로드 -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f3f4f6;
-        }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f3f4f6;
+      }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            width: 100%;
-            max-width: 500px;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-            overflow: hidden;
-        }
+      .container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        max-width: 500px;
+        border-radius: 15px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        background-color: #fff;
+        overflow: hidden;
+      }
 
-        section {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            overflow-y: auto;
-            padding: 20px;
-        }
+      section {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        overflow-y: auto;
+        padding: 20px;
+      }
 
-        .reservation-box {
-            width: 80%;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            margin-bottom: 15px;
-            background-color: #ffffff;
-            position: relative;
-            transition: transform 0.3s;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+      .reservation-box {
+        width: 80%;
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        padding: 15px;
+        margin-bottom: 15px;
+        background-color: #ffffff;
+        position: relative;
+        transition: transform 0.3s;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-        .reservation-box .datetime {
-            font-size: 1rem;
-            color: #333;
-            margin-bottom: 5px;
-        }
+      .reservation-box .datetime {
+        font-size: 1rem;
+        color: #333;
+        margin-bottom: 5px;
+      }
 
-        .reservation-box .store {
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
+      .reservation-box .store {
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
 
-        .past-reservation {
-            background-color: #ffeeee;
-            color: #f44336;
-        }
+      .past-reservation {
+        background-color: #ffeeee;
+        color: #f44336;
+      }
 
-        .upcoming-reservation {
-            background-color: #e8f5e9;
-            color: #4caf50;
-        }
+      .upcoming-reservation {
+        background-color: #e8f5e9;
+        color: #4caf50;
+      }
 
-        .cancel-button {
-            background-color: #f44336;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 12px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
+      .cancel-button {
+        background-color: #f44336;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 12px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
 
-        .cancel-button:hover {
-            background-color: #d32f2f;
-        }
+      .cancel-button:hover {
+        background-color: #d32f2f;
+      }
 
-        #site-header {
-            background-color: #4caf50;
-            height: 65px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+      #site-header {
+        background-color: #4caf50;
+        height: 65px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
 
-        #logo {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #ffffff;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
+      #logo {
+        font-size: 2rem;
+        font-weight: bold;
+        color: #ffffff;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      }
 
-        footer {
-            background-color: #4caf50;
-            padding: 10px 0;
-            text-align: center;
-            width: 100%;
-        }
+      footer {
+        background-color: #4caf50;
+        padding: 10px 0;
+        text-align: center;
+        width: 100%;
+      }
 
-        footer ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
+      footer ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+      }
 
-        footer li {
-            display: inline;
-            margin: 0 15px;
-        }
+      footer li {
+        display: inline;
+        margin: 0 15px;
+      }
 
-        footer a {
-            text-decoration: none;
-            color: #ffffff;
-        }
+      footer a {
+        text-decoration: none;
+        color: #ffffff;
+      }
 
-        footer a:hover {
-            text-decoration: underline;
-        }
+      footer a:hover {
+        text-decoration: underline;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header id="site-header">
-            <div id="logo">GFOOD</div>
-        </header>
-        <section id="reservationSection">
-            <!-- 예약 리스트가 여기에 표시됩니다. -->
-        </section>
-        <footer>
-            <ul>
-                <li><a href="index.html" id="back"><span class="material-symbols-outlined">home</span>홈</a></li>
-                <li><a href="search.html" id="search"><span class="material-symbols-outlined">search</span>검색</a></li>
-                <li><a href="reservation.html" id="reservation"><span class="material-symbols-outlined">event</span>예약</a></li>
-                <li><a href="profile.html" id="profile"><span class="material-symbols-outlined">person</span>회원정보</a></li>
-            </ul>
-        </footer>
+      <header id="site-header">
+        <div id="logo">GFOOD</div>
+      </header>
+      <section id="reservationSection">
+        <!-- 예약 리스트가 여기에 표시됩니다. -->
+      </section>
+      <footer>
+        <ul>
+          <li>
+            <a href="index.html" id="back"
+              ><span class="material-symbols-outlined">home</span>홈</a
+            >
+          </li>
+          <li>
+            <a href="search.html" id="search"
+              ><span class="material-symbols-outlined">search</span>검색</a
+            >
+          </li>
+          <li>
+            <a href="reservation.html" id="reservation"
+              ><span class="material-symbols-outlined">event</span>예약</a
+            >
+          </li>
+          <li>
+            <a href="profile.html" id="profile"
+              ><span class="material-symbols-outlined">person</span>회원정보</a
+            >
+          </li>
+        </ul>
+      </footer>
     </div>
     <script>
-      
-        const userId = getUserIdFromSession();
-            fetchReservations(userId);
-        function getUserIdFromSession() {
-          // 로그인 후 사용자 id가져오기 필요
-            return 1;
-        }
+      const userId = getUserIdFromSession();
+      fetchReservations(userId);
+      function getUserIdFromSession() {
+        // 로그인 후 사용자 id가져오기 필요
+        return 1;
+      }
 
-        function fetchReservations(userId) {
-            fetch(`http://localhost:8002/users/users/${userId}/reservation`)  // 사용자 ID 확인
-                .then((response) => {
-                    if (!response.ok) {
-                        throw new Error("Network response was not ok");
-                    }
-                    return response.json();
-                })
-                .then((data) => {
-                    const reservationSection = document.getElementById("reservationSection");
-                    const now = new Date();
-
-                    data.forEach(reservation => {
-                        const reservationBox = document.createElement("div");
-                        reservationBox.className = "reservation-box";
-
-                        const reservationDate = new Date(reservation.reservation_datetime);
-
-                        // 예약 시간을 표시
-                        const dateTimeSpan = document.createElement("span");
-                        dateTimeSpan.className = "datetime";
-                        if (reservationDate < now) {
-                            dateTimeSpan.textContent = "Time Out";
-                            reservationBox.classList.add("past-reservation");
-                        } else {
-                            dateTimeSpan.textContent = reservation.reservation_datetime;
-                            reservationBox.classList.add("upcoming-reservation");
-                        }
-
-                        // 상점 이름을 표시
-                        const storeSpan = document.createElement("span");
-                        storeSpan.className = "store";
-                        storeSpan.textContent = reservation.store_name;
-
-                        // 예약 취소
-                        const cancelButton = document.createElement("button");
-                        cancelButton.className = "cancel-button";
-                        cancelButton.textContent = "예약 취소";
-                        cancelButton.onclick = function () {
-                            cancelReservation(reservation.reservation_id);
-                        };
-                        reservationBox.appendChild(storeSpan);
-                        reservationBox.appendChild(dateTimeSpan);
-                        reservationBox.appendChild(cancelButton);
-                        reservationSection.appendChild(reservationBox);
-                    });
-                })
-                .catch((error) => {
-                    console.error("There was a problem with the fetch operation:", error);
-                });
-        }
-
-        function cancelReservation(reservationId) {
-            if (confirm("정말로 이 예약을 취소하시겠습니까?")) {
-                fetch(`http://localhost:8002/reservations/${reservationId}`, {
-                    method: 'DELETE',
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error("Network response was not ok");
-                    }
-                    alert("예약이 취소되었습니다.");
-                    window.location.reload(); // 예약 취소 후 페이지를 새로고침하여 목록을 갱신
-                })
-                .catch((error) => {
-                    console.error("There was a problem with the delete operation:", error);
-                    alert("예약 취소 중 문제가 발생했습니다.");
-                });
+      function fetchReservations(userId) {
+        fetch(`http://localhost:8002/users/${userId}/reservation`) // 사용자 ID 확인
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("Network response was not ok");
             }
+            return response.json();
+          })
+          .then((data) => {
+            const reservationSection =
+              document.getElementById("reservationSection");
+            const now = new Date();
+
+            data.forEach((reservation) => {
+              const reservationBox = document.createElement("div");
+              reservationBox.className = "reservation-box";
+
+              const reservationDate = new Date(
+                reservation.reservation_datetime
+              );
+
+              // 예약 시간을 표시
+              const dateTimeSpan = document.createElement("span");
+              dateTimeSpan.className = "datetime";
+              if (reservationDate < now) {
+                dateTimeSpan.textContent = "Time Out";
+                reservationBox.classList.add("past-reservation");
+              } else {
+                dateTimeSpan.textContent = reservation.reservation_datetime;
+                reservationBox.classList.add("upcoming-reservation");
+              }
+
+              // 상점 이름을 표시
+              const storeSpan = document.createElement("span");
+              storeSpan.className = "store";
+              storeSpan.textContent = reservation.store_name;
+
+              // 예약 취소
+              const cancelButton = document.createElement("button");
+              cancelButton.className = "cancel-button";
+              cancelButton.textContent = "예약 취소";
+              cancelButton.onclick = function () {
+                cancelReservation(reservation.reservation_id);
+              };
+              reservationBox.appendChild(storeSpan);
+              reservationBox.appendChild(dateTimeSpan);
+              reservationBox.appendChild(cancelButton);
+              reservationSection.appendChild(reservationBox);
+            });
+          })
+          .catch((error) => {
+            console.error(
+              "There was a problem with the fetch operation:",
+              error
+            );
+          });
+      }
+
+      function cancelReservation(reservationId) {
+        if (confirm("정말로 이 예약을 취소하시겠습니까?")) {
+          fetch(`http://localhost:8002/reservations/${reservationId}`, {
+            method: "DELETE",
+          })
+            .then((response) => {
+              if (!response.ok) {
+                throw new Error("Network response was not ok");
+              }
+              alert("예약이 취소되었습니다.");
+              window.location.reload(); // 예약 취소 후 페이지를 새로고침하여 목록을 갱신
+            })
+            .catch((error) => {
+              console.error(
+                "There was a problem with the delete operation:",
+                error
+              );
+              alert("예약 취소 중 문제가 발생했습니다.");
+            });
         }
+      }
     </script>
-</body>
+  </body>
 </html>
