--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@ footer a:hover {
     filter: blur(5px);
 }
 
+.header-button.active {
+    background-color: #125c15; /* Pressed state background color */
+    color: #ffffff; /* Pressed state text color */
+    border: 2px solid #0b7e0f; /* Optional: add a border to indicate it's pressed */
+}
+
+
 
     </style>
     <script
@@ -331,7 +338,7 @@ footer a:hover {
 
     </div>
     <div class="button_below_title">
-      <a href="reservation.html" class="reserve_page_btn">예약하기</a>
+      <a href="reservation_go.html" class="reserve_page_btn">예약하기</a>
     </div>
     <span id="modalContent">여기에 가게에 대한 상세 설명이 들어갑니다.</span>
     <ul class="menu_list" id="menuList">
@@ -394,10 +401,10 @@ footer a:hover {
     const map = new kakao.maps.Map(mapElement, mapOption);
     let markers = []; // 마커 배열
     let clusterer = new kakao.maps.MarkerClusterer({
-      map: map,
-      averageCenter: true,
-      minLevel: 6
-    })
+        map: map,
+        averageCenter: true,
+        minLevel: 6
+    });
     let currentOverlay = null; // 현재 오버레이 저장 변수
     let currentType = null; // 현재 선택된 타입 저장 변수
 
@@ -453,11 +460,16 @@ footer a:hover {
                 <span>${store.type}</span>
             </div>`;
             
+            // 마커 클릭 이벤트 내에서 예약하기 버튼의 링크에 마커 정보를 추가합니다.
             overlayContent.querySelector(".overlay-content").onclick = function () {
-                getDetail(store); // 상세 정보 보기
-                modal.style.display = "block"; // 모달 표시
-                mapElement.classList.add("blur"); // 지도 블러 처리
+                // 좌표 정보를 URL 파라미터로 추가
+                const reserveButton = document.querySelector(".reserve_page_btn");
+                reserveButton.href = `reservation_go.html?store_id=${store.id}&store_name=${encodeURIComponent(store.name)}&store_type=${encodeURIComponent(store.type)}&latitude=${store.x_coordinate}&longitude=${store.y_coordinate}`;
+
+                // 페이지 이동 (예약 페이지로)
+                window.location.href = reserveButton.href;
             };
+
             const overlay = new kakao.maps.CustomOverlay({
                 position: pos,
                 content: overlayContent,
@@ -466,6 +478,7 @@ footer a:hover {
             currentOverlay = overlay; // 현재 오버레이 업데이트
             overlay.setMap(map); // 오버레이 지도에 표시
         });
+
         markers.push({ store, marker }); // 마커 배열에 저장
     }
 
@@ -473,7 +486,7 @@ footer a:hover {
     function clearMarkers() {
         markers.forEach(({ marker }) => marker.setMap(null)); // 지도에서 마커 제거
         markers = []; // 마커 배열 초기화
-        clusterer.clear()
+        clusterer.clear();
     }
 
     // 마커 타입에 따라 좌표 데이터 가져오기
@@ -493,9 +506,9 @@ footer a:hover {
             });
             const res = []
             markers.forEach((marker, i)=>{
-              res.push(marker.marker)
-            })
-            clusterer.addMarkers(res)
+                res.push(marker.marker);
+            });
+            clusterer.addMarkers(res);
         } catch (error) {
             console.error("Error fetching store data:", error);
         }
@@ -535,11 +548,31 @@ footer a:hover {
     }
 });
 
+window.onload = function(){
+    const urlParams = new URLSearchParams(window.location.search);
+    window.name = urlParams.get("user_id");
+};
 
-      window.onload = function(){
-        const urlParams = new URLSearchParams(window.location.search)
-        window.name =urlParams.get("user_id")
-      }
+document.addEventListener("DOMContentLoaded", function () {
+    const buttons = document.querySelectorAll(".header-button");
+
+    buttons.forEach(button => {
+        button.addEventListener("click", function () {
+            // Remove the 'active' class from all buttons
+            buttons.forEach(btn => btn.classList.remove("active"));
+
+            // Add the 'active' class to the clicked button
+            this.classList.add("active");
+
+            // Handle other logic such as marker loading
+            const type = this.getAttribute("data-type");
+            const markerIcon = this.getAttribute("data-icon");
+            markertype(type, markerIcon);
+        });
+    });
+});
+
+
     </script>
     
 </body>
