--- a/search.html
+++ b/search.html
@@ -326,214 +326,218 @@
     </div>
 </div>
 </div>
-
 <script>
-  let currentSlide = 0;
-  let startY = 0;
-  let isDragging = false;
-  let initialTransform = 0;
-  const userId = getUserIdFromSession(); // 현재 로그인된 사용자의 ID를 세션 또는 쿠키에서 가져오는 함수
-  let selectedStoreName = ""; // 예약하려는 가게 이름 저장
-
-  function searchData() {
+    let currentSlide = 0;
+    let startY = 0;
+    let isDragging = false;
+    let initialTransform = 0;
+    const userId = window.name; // 현재 로그인된 사용자의 ID를 세션 또는 쿠키에서 가져오는 함수
+    let selectedStoreIdx = null; // 예약하려는 상점의 인덱스 저장
+  
+    // 검색 데이터 함수
+    function searchData() {
       const foodType = document.getElementById("searchInput").value.trim();
       const sliderWrapper = document.getElementById("sliderWrapper");
-
+  
       if (!foodType) {
-          sliderWrapper.innerHTML = "Please enter a food type.";
-          return;
+        sliderWrapper.innerHTML = "Please enter a food type.";
+        return;
       }
-
+  
       fetch(`http://127.0.0.1:8002/stores/${foodType}`)
-          .then(response => {
-              if (!response.ok) {
-                  throw new Error("Network response was not ok");
-              }
-              return response.json();
-          })
-          .then(data => {
-              console.log("Stores data:", data);
-              sliderWrapper.innerHTML = ""; // Clear previous results
-
-              if (data.length === 0) {
-                  sliderWrapper.innerHTML = "No stores found for the given food type.";
-                  return;
-              }
-
-              // Organize data by store_name
-              const storesMap = new Map();
-              data.forEach(item => {
-                  if (!storesMap.has(item.store_name)) {
-                      storesMap.set(item.store_name, []);
-                  }
-                  storesMap.get(item.store_name).push({ menu_name: item.menu_name, price: item.price });
+        .then(response => {
+          if (!response.ok) {
+            throw new Error("Network response was not ok");
+          }
+          return response.json();
+        })
+        .then(data => {
+          console.log("Stores data:", data);
+          sliderWrapper.innerHTML = ""; // Clear previous results
+  
+          if (data.length === 0) {
+            sliderWrapper.innerHTML = "No stores found for the given food type.";
+            return;
+          }
+  
+          // Organize data by store_name
+          const storesMap = new Map();
+          data.forEach(item => {
+            if (!storesMap.has(item.store_name)) {
+              storesMap.set(item.store_name, {
+                store_idx: item.store_idx,
+                menuItems: []
               });
-
-              // Create store containers
-              Array.from(storesMap.entries()).forEach(([storeName, menuItems]) => {
-                  const storeContainer = document.createElement("div");
-                  storeContainer.className = "store-container";
-
-                  const storeHeader = document.createElement("div");
-                  storeHeader.className = "store-header";
-                  storeHeader.innerHTML = `
-                      <h3>${storeName}</h3>
-                      <button class="reserve-button" onclick="makeReservation('${storeName}')">예약</button>
-                  `;
-
-                  const menuInfo = document.createElement("div");
-                  menuInfo.className = "menu-info";
-                  menuInfo.innerHTML = `
-                      <ul>
-                          ${menuItems.map(item => `<li>${item.menu_name}: ${item.price}원</li>`).join('')}
-                      </ul>
-                  `;
-
-                  storeContainer.appendChild(storeHeader);
-                  storeContainer.appendChild(menuInfo);
-                  sliderWrapper.appendChild(storeContainer);
-              });
-
-              updateSlidePosition();
-          })
-          .catch(error => {
-              console.error('There was a problem with the fetch operation:', error);
-              sliderWrapper.innerHTML = "An error occurred. Please try again.";
+            }
+            storesMap.get(item.store_name).menuItems.push({ menu_name: item.menu_name, price: item.price });
           });
-  }
-
-  function openModal(storeName) {
-      selectedStoreName = storeName; // 선택된 가게 이름 저장
+  
+          // Create store containers
+          Array.from(storesMap.entries()).forEach(([storeName, storeData]) => {
+            const storeContainer = document.createElement("div");
+            storeContainer.className = "store-container";
+  
+            const storeHeader = document.createElement("div");
+            storeHeader.className = "store-header";
+            storeHeader.innerHTML = `
+              <h3>${storeName}</h3>
+              <button class="reserve-button" onclick="makeReservation(${storeData.store_idx})">예약</button>
+            `;
+  
+            const menuInfo = document.createElement("div");
+            menuInfo.className = "menu-info";
+            menuInfo.innerHTML = `
+              <ul>
+                ${storeData.menuItems.map(item => `<li>${item.menu_name}: ${item.price}원</li>`).join('')}
+              </ul>
+            `;
+  
+            storeContainer.appendChild(storeHeader);
+            storeContainer.appendChild(menuInfo);
+            sliderWrapper.appendChild(storeContainer);
+          });
+  
+          updateSlidePosition();
+        })
+        .catch(error => {
+          console.error('There was a problem with the fetch operation:', error);
+          sliderWrapper.innerHTML = "An error occurred. Please try again.";
+        });
+    }
+  
+    // 모달 열기 함수
+    function openModal(storeIdx) {
+      selectedStoreIdx = storeIdx; // 선택된 상점의 인덱스 저장
       document.getElementById("reservationModal").style.display = "flex";
-
+  
       // 현재 시간 기준으로 시간 옵션 추가
       const now = new Date();
       const hours = now.getHours();
-
+  
       const reservationTimeSelect = document.getElementById("reservationTime");
       reservationTimeSelect.innerHTML = ""; // 기존 옵션 초기화
-
+  
       for (let i = hours + 1; i <= 23; i++) { // 현재 시간보다 이후의 시간만 추가
-          const option = document.createElement("option");
-          option.value = `${i}:00`;
-          option.text = `${i}:00`;
-          reservationTimeSelect.add(option);
+        const option = document.createElement("option");
+        option.value = `${i}:00`;
+        option.text = `${i}:00`;
+        reservationTimeSelect.add(option);
       }
-  }
-
-  function closeModal() {
+    }
+  
+    // 모달 닫기 함수
+    function closeModal() {
       document.getElementById("reservationModal").style.display = "none";
-  }
-
-  function submitReservation() {
+    }
+  
+    // 예약 제출 함수
+    function submitReservation() {
       const reservationDate = document.getElementById("reservationDate").value;
       const reservationTime = document.getElementById("reservationTime").value;
-
+  
       if (!reservationDate || !reservationTime) {
-          alert("날짜와 시간을 모두 선택해 주세요.");
-          return;
+        alert("날짜와 시간을 모두 선택해 주세요.");
+        return;
       }
-
+  
       const reservationDatetime = `${reservationDate}T${reservationTime}:00`;
-
+  
       const reservationData = {
-          name: "John Doe",  // 여기서 실제 사용자 이름을 설정할 수 있습니다.
-          reservation_datetime: reservationDatetime,
-          store_name: selectedStoreName
+        user_idx: userId,
+        store_idx: selectedStoreIdx,
+        reservation_datetime: reservationDatetime
       };
-
-      fetch(`http://127.0.0.1:8002/users/users/${userId}/reservation`, {
-          method: 'POST',
-          headers: {
-              'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(reservationData)
+  
+      fetch(`http://127.0.0.1:8002/users/${userId}/reservation`, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(reservationData)
       })
       .then(response => {
-          if (!response.ok) {
-              throw new Error("Network response was not ok");
-          }
-          return response.json();
+        if (!response.ok) {
+          throw new Error("Network response was not ok");
+        }
+        return response.json();
       })
       .then(data => {
-          alert("예약이 성공적으로 추가되었습니다.");
-          closeModal();
+        alert("예약이 성공적으로 추가되었습니다.");
+        closeModal();
       })
       .catch(error => {
-          console.error('There was a problem with the fetch operation:', error);
-          alert("예약에 실패했습니다. 다시 시도해주세요.");
+        console.error('There was a problem with the fetch operation:', error);
+        alert("예약에 실패했습니다. 다시 시도해주세요.");
       });
-  }
-
-  function makeReservation(storeName) {
-      openModal(storeName);
-  }
-
-  function updateSlidePosition() {
+    }
+  
+    // 예약하기 함수
+    function makeReservation(storeIdx) {
+      openModal(storeIdx);
+    }
+  
+    // 슬라이드 위치 업데이트 함수
+    function updateSlidePosition() {
       const sliderWrapper = document.getElementById("sliderWrapper");
       const slideHeight = sliderWrapper.children[0]?.offsetHeight || 0;
       const offset = -currentSlide * slideHeight;
       sliderWrapper.style.transform = `translateY(${offset}px)`;
-  }
-
-  // Handle dragging
-  document.getElementById("sliderWrapper").addEventListener('mousedown', (e) => {
+    }
+  
+    // 드래그 핸들링
+    document.getElementById("sliderWrapper").addEventListener('mousedown', (e) => {
       startY = e.pageY;
       isDragging = true;
       initialTransform = parseFloat(getComputedStyle(document.getElementById("sliderWrapper")).transform.split(',')[5]) || 0;
-  });
-
-  document.getElementById("sliderWrapper").addEventListener('mousemove', (e) => {
+    });
+  
+    document.getElementById("sliderWrapper").addEventListener('mousemove', (e) => {
       if (!isDragging) return;
       const moveY = e.pageY - startY;
       const sliderWrapper = document.getElementById("sliderWrapper");
       const newTransform = initialTransform + moveY;
       sliderWrapper.style.transform = `translateY(${newTransform}px)`;
-  });
-
-  document.getElementById("sliderWrapper").addEventListener('mouseup', () => {
+    });
+  
+    document.getElementById("sliderWrapper").addEventListener('mouseup', () => {
       if (!isDragging) return;
       isDragging = false;
       const sliderWrapper = document.getElementById("sliderWrapper");
       const slideHeight = sliderWrapper.children[0]?.offsetHeight || 0;
       const currentTransform = parseFloat(getComputedStyle(sliderWrapper).transform.split(',')[5]) || 0;
       const newSlide = Math.round(-currentTransform / slideHeight);
-
+  
       // Constrain the slide index to be within bounds
       currentSlide = Math.max(0, Math.min(newSlide, sliderWrapper.children.length - 1));
       updateSlidePosition();
-  });
-
-  document.getElementById("sliderWrapper").addEventListener('mouseleave', () => {
+    });
+  
+    document.getElementById("sliderWrapper").addEventListener('mouseleave', () => {
       isDragging = false;
-  });
-
-  // Handle mouse wheel scrolling
-  document.getElementById("sliderWrapper").addEventListener('wheel', (e) => {
+    });
+  
+    // 마우스 휠 스크롤 핸들링
+    document.getElementById("sliderWrapper").addEventListener('wheel', (e) => {
       const sliderWrapper = document.getElementById("sliderWrapper");
       const slideHeight = sliderWrapper.children[0]?.offsetHeight || 0;
-
+  
       if (e.deltaY > 0) {
-          currentSlide = Math.min(currentSlide + 1, sliderWrapper.children.length - 1);
+        currentSlide = Math.min(currentSlide + 1, sliderWrapper.children.length - 1);
       } else {
-          currentSlide = Math.max(currentSlide - 1, 0);
+        currentSlide = Math.max(currentSlide - 1, 0);
       }
-
+  
       updateSlidePosition();
       e.preventDefault();
-  });
-
-  document.getElementById("searchInput").addEventListener("keydown", function (event) {
+    });
+  
+    // 검색 입력에서 Enter 키 입력 처리
+    document.getElementById("searchInput").addEventListener("keydown", function (event) {
       if (event.key === "Enter") {
-          searchData();
+        searchData();
       }
-  });
-
-  function getUserIdFromSession() {
-      //TODO
-      return window.name;
-  }
-</script>
-
+    });
+  </script>
+  
 </body>
 </html>
